@@ -9,8 +9,15 @@ jsp-api.jar = ${project.dir}/lib/jsp-2.0.jar
 # File path to JSTL archive
 jstl.jar = ${project.dir}/lib/jstl.jar
 
+# File path to commons codec package
+commons-codec.jar = ${project.dir}/lib/commons-codec-1.2.jar
+
 # File path to com.oreilly.servlet package
+####### deprecated - remove if new fileupload is ready
 cos.jar = ${project.dir}/lib/cos.jar
+
+# File path to commons codec package
+commons-fileupload.jar = ${project.dir}/lib/commons-fileupload-1.0.jar
 
 # File path to commons logging package
 commons-logging.jar = ${project.dir}/lib/commons-logging.jar
