@@ -47,9 +47,9 @@
         <pathelement location="${servlet.jar}"/>
         <pathelement location="${jsp-api.jar}"/>
         <pathelement location="${jstl.jar}"/>
-        <pathelement location="${cos.jar}"/>    <!-- Base64 classes -->
         <pathelement location="${commons-logging.jar}"/>
         <pathelement location="${commons-el.jar}"/>
+        <pathelement location="${commons-codec.jar}"/>
     </path>
 
     <!-- classpath for compiling component classes -->
@@ -59,9 +59,10 @@
         <pathelement location="${servlet.jar}"/>
         <pathelement location="${jsp-api.jar}"/>
         <pathelement location="${jstl.jar}"/>
-        <pathelement location="${cos.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
         <pathelement location="${commons-el.jar}"/>
+        <pathelement location="${commons-fileupload.jar}"/>
+        <pathelement location="${cos.jar}"/>
     </path>
 
     <!-- classpath for javadoc creation -->
@@ -69,9 +70,10 @@
         <pathelement location="${servlet.jar}"/>
         <pathelement location="${jsp-api.jar}"/>
         <pathelement location="${jstl.jar}"/>
-        <pathelement location="${cos.jar}"/>
+        <pathelement location="${commons-codec.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
         <pathelement location="${commons-el.jar}"/>
+        <pathelement location="${commons-fileupload.jar}"/>
         <pathelement location="${myfaces.jar}"/>
     </path>
 
@@ -159,11 +161,13 @@
                         prefix="myfaces-${manifest.impl.version}/conf"/>
             <tarfileset file="${myfaces.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
-            <tarfileset file="${cos.jar}"
+            <tarfileset file="${commons-codec.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
             <tarfileset file="${commons-logging.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
             <tarfileset file="${commons-el.jar}"
+                        prefix="myfaces-${manifest.impl.version}/lib"/>
+            <tarfileset file="${commons-fileupload.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
             <tarfileset file="${jstl.jar}"
                         prefix="myfaces-${manifest.impl.version}/lib"/>
@@ -227,10 +231,10 @@
             antfile="build.xml"
             inheritall="false"
             target="clean"/>
-        <ant dir="${build.dir}/tagunit-webapp"
+        <!--ant dir="${build.dir}/tagunit-webapp"
             antfile="build.xml"
             inheritall="false"
-            target="clean"/>
+            target="clean"/-->
     </target>
 
 
