@@ -89,7 +89,7 @@
             <lib file="${temp.dir}/${tests.jar}"/>
             <lib file="${commons-el.jar}"/>
         	    <lib file="${commons-logging.jar}"/>
-            <lib file="${cos.jar}"/>
+            <lib file="${commons-codec.jar}"/>
             <lib file="${jsp-api.jar}"/>
             <lib file="${jstl.jar}"/>
             <lib file="${myfaces.jar}"/>
