@@ -6,22 +6,17 @@
  */
 package net.sourceforge.myfaces.config;
 
+import junit.framework.TestCase;
+
+import javax.faces.FactoryFinder;
+import javax.faces.context.ExternalContext;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.security.Principal;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
-
-import javax.faces.FactoryFinder;
-import javax.faces.context.ExternalContext;
-
-import junit.framework.TestCase;
+import java.util.*;
 
 
 /**
@@ -33,9 +28,11 @@ import junit.framework.TestCase;
 public class FacesConfigFactoryBase_Test extends TestCase {
 
 
+    /*
   public static void main(String[] args) {
     junit.textui.TestRunner.run(FacesConfigFactoryBaseCactusTest.class);
   }
+  */
 
   /*
    * @see TestCase#setUp()
